--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff008c00</color>
+    <!--<color name="colorPrimary">#00428c</color>-->
+    <color name="colorPrimary">#0072c3</color>
     <color name="colorPrimaryDark">#ff003980</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
@@ -9,4 +10,6 @@
     <color name="fab_primary">#ff008ef5</color>
     <color name="fab_pressed">#ff00559b</color>
     <color name="fab_ripple">#ffe46844</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
