--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -38,6 +38,8 @@
             app:stl_indicatorThickness="4dp"
             />
 
+
+        <!--<android.support.v4.view.ViewPager-->
         <edu.guet.jjhome.indexsp.view.NonSwipeableViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
