--- a/mobile/src/main/res/layout/activity_details.xml
+++ b/mobile/src/main/res/layout/activity_details.xml
@@ -91,7 +91,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Text"
+                    android:text="正在获取内容..."
                     android:id="@+id/text_content"
                     android:textIsSelectable="true" />
             </ScrollView>
